# chaos

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Chaos.c  Chaos.h  LICENSE  Makefile  README.md  benchmark.sh  chaos.c  chaos.h  chaos.l  chaos.y  coverage.sh  dynamic_flags.sh  enums.h  errors.c  errors.h  help.txt  make.bat  parser.y  profile.sh  requirements.sh  symbol.c  symbol.h
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  performance-problem.md  question.md
.github/workflows/: ast.yml  benchmark.yml  cli_args.yml  compiler_extension.yml  compiler_memcheck.yml  compiler_sanitizer_address.yml  (+19 more)
ChaosC/: CMakeLists.txt
ast/: CMakeLists.txt  ast.c  ast.h  ast_print.c  ast_print.h  token.h
cmake/: CTestConfig.cmake  Config.cmake.in  MultiCPackConfig.cmake  README.txt  Welcome.txt  config.h.in
compiler/: CMakeLists.txt  compiler.c  compiler.h  compiler_emit.c  compiler_emit.h
functions/: function.c  function.h
interpreter/: CMakeLists.txt  errors.c  errors.h  extension.c  extension.h  function.c  function.h  interpreter.c  interpreter.h  loop.c  loop.h  module.c  module.h  module_new.c  module_new.h  symbol.c  symbol.h
lexer/: CMakeLists.txt  lexer.h  lexer.l
loops/: foreach.c  foreach.h  loop.c  loop.h  times_do.c  times_do.h
modules/: extension.c  extension.h  module.c  module.h
parser/: parser.c  parser.h  parser.y
preemptive/: preemptive.c  preemptive.h  preemptive_errors.c  preemptive_errors.h  preemptive_function.c  preemptive_function.h  preemptive_symbol.c  preemptive_symbol.h
tests/: any.json  any.kaos  any.out  array.kaos  array.out  ast.bat  ast.sh  boolean.chs  boolean.json  boolean.kaos  cli_args.sh  comment.json  comment.kaos  comment.out  compiler.bat  compiler.sh  decision.json  decision.kaos  decision.out  del.chs  del.json  del.kaos  del.out  dict.json  dict.kaos  dict.out  echo.json  echo.kaos  echo.out  everything.json  everything.kaos  everything.out  exit.json  exit.kaos  exit_int.json  exit_int.kaos  exit_var.json  exit_var.kaos  fibonacci.kaos  function.json  (+80 more)
utilities/: CMakeLists.txt  cwalk.c  cwalk.h  helpers.c  helpers.h  injector.c  injector.h  language.c  language.h  messages.c  messages.h  phase.h  platform.h  shell.c  shell.h
utilities/windows/: getopt.c  getopt.h
vm/: CMakeLists.txt  cpu.c  cpu.h  flags.c  flags.h  instructions.h  ir.h  types.h
(+82 files in other folders)
